--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,21 @@ img{
         margin: 4rem 2rem;
     }
   }
+
+
+@media screen and (min-width: 1600px) {
+  .section__padding{
+    padding: 4rem 7rem;
+  }
+  .section__margin{
+    margin: 4rem 7rem;
+  }
+}
+@media screen and (min-width: 1900px) {
+  .section__padding{
+    padding: 4rem 10rem;
+  }
+  .section__margin{
+    margin: 4rem 10rem;
+  }
+}
