--- a/src/container/header/header.css
+++ b/src/container/header/header.css
@@ -90,6 +90,30 @@
   width: 100%;
   height: 100%;
 }
+.scrollup{
+  background-color: #ff4820;
+  color: white;
+  border: none;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: .5rem;
+  width: 38px;
+  height: 38px;
+  position: fixed;
+  bottom: 2rem;
+  right: 1.5rem;
+  z-index: 100;
+  border-radius: .5rem;
+  box-shadow: -2px 2px 4px rgba(0,0,0,.3);
+  cursor: pointer;
+  opacity: .9;
+  transition: 0.3s ease;
+}
+.scrollup:hover{
+  background-color: #ce2e0a;
+}
 
 
 @media screen and (max-width:1050px) {
